# AE-RP2040_EMUZ80

./: .gitignore  AE-RP2040.c  AE-RP2040_EMUZ80.c  AE-RP2040_EMUZ80.uf2  CMakeLists.txt  EMUBASIC.h  README.md  RP2350-Zero_EMUZ80.uf2  WeAct-RP2350B_EMUZ80.uf2
boards/AE-RP2040/: AE-RP2040.c  AE-RP2040.pio  CMakeLists.txt
boards/RP2350-Zero/: CMakeLists.txt  RP2350-Zero.c
boards/WeAct-RP2350B/: CMakeLists.txt  WeAct-RP2350B.c  WeAct-RP2350B.pio
