set(TARGET_AE "AE-RP2040_EMUZ80")
add_executable(${TARGET_AE} AE-RP2040.c)
pico_set_program_name(${TARGET_AE} ${TARGET_AE})
pico_set_program_version(${TARGET_AE} "0.1")
pico_generate_pio_header(${TARGET_AE} ${CMAKE_CURRENT_LIST_DIR}/AE-RP2040.pio)
pico_enable_stdio_uart(${TARGET_AE} 0)
pico_enable_stdio_usb(${TARGET_AE} 1)
target_link_libraries(${TARGET_AE} pico_stdlib hardware_pio hardware_timer hardware_pwm pico_multicore)
target_include_directories(${TARGET_AE} PRIVATE ${CMAKE_SOURCE_DIR})
pico_add_extra_outputs(${TARGET_AE})
pico_set_binary_type(${TARGET_AE} copy_to_ram)
target_compile_options(${TARGET_AE} PRIVATE -O3)
