set(TARGET_ZERO "RP2350-Zero_EMUZ80")
add_executable(${TARGET_ZERO} RP2350-Zero.c)
pico_set_program_name(${TARGET_ZERO} ${TARGET_ZERO})
pico_set_program_version(${TARGET_ZERO} "0.1")
pico_generate_pio_header(${TARGET_ZERO} ${CMAKE_CURRENT_LIST_DIR}/RP2350-Zero.pio)
pico_enable_stdio_uart(${TARGET_ZERO} 0)
pico_enable_stdio_usb(${TARGET_ZERO} 1)
target_link_libraries(${TARGET_ZERO} pico_stdlib hardware_pio hardware_timer hardware_pwm pico_multicore)
target_include_directories(${TARGET_ZERO} PRIVATE ${CMAKE_SOURCE_DIR})
pico_add_extra_outputs(${TARGET_ZERO})
pico_set_binary_type(${TARGET_ZERO} copy_to_ram)
target_compile_options(${TARGET_ZERO} PRIVATE -O3)
