set(TARGET_WEACT "WeAct-RP2350B_EMUZ80")
add_executable(${TARGET_WEACT} WeAct-RP2350B.c)
pico_set_program_name(${TARGET_WEACT} ${TARGET_WEACT})
pico_set_program_version(${TARGET_WEACT} "0.1")
pico_generate_pio_header(${TARGET_WEACT} ${CMAKE_CURRENT_LIST_DIR}/WeAct-RP2350B.pio)
pico_enable_stdio_uart(${TARGET_WEACT} 0)
pico_enable_stdio_usb(${TARGET_WEACT} 1)
target_link_libraries(${TARGET_WEACT} pico_stdlib hardware_pio hardware_timer hardware_pwm pico_multicore)
target_include_directories(${TARGET_WEACT} PRIVATE ${CMAKE_SOURCE_DIR})
pico_add_extra_outputs(${TARGET_WEACT})
pico_set_binary_type(${TARGET_WEACT} copy_to_ram)
target_compile_options(${TARGET_WEACT} PRIVATE -O3)
